[metadata]
name = bonnyci-integration-handler
summary = Handle github integration events for bonny
description-file =
    README.rst
author = Jamie Lennox
author-email = jamielennox@gmail.com
home-page = https://github.com/BonnyCI/integration-handler
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    bonnyci_integration_handler

[entry_points]
wsgi_scripts =
    bonnyci-integration-handler = bonnyci_integration_handler.application:initialize_application
